--- a/app/styles/common.css
+++ b/app/styles/common.css
@@ -1,3 +1,7 @@
 body {
-  background-color: #333;
+  background-color: #222;
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 300;
+  color: #ccc;
+  margin: 0px;
 }
